# vuln-platform

./: .env.example  .gitignore  CHANGELOG.md  LICENSE.md  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  Dockerfile.worker  README.md  alembic.ini  pyproject.toml  railway.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/middleware/: request_context.py
backend/app/api/schemas/: analysis_schemas.py  auth_schemas.py  cve_schemas.py  report_schemas.py  user_schemas.py
backend/app/api/v1/: analysis.py  auth.py  health.py  intelligence.py  organizations.py  reports.py  users.py
backend/app/application/dto/: auth_dto.py
backend/app/application/interfaces/: repositories.py
backend/app/application/services/: ai_analyst_service.py  auth_service.py  cve_correlation_service.py  organization_service.py  report_service.py  risk_scoring_service.py  user_service.py
backend/app/domain/: enums.py  exceptions.py  value_objects.py
backend/app/domain/models/: analysis.py  cve.py  report.py
backend/app/infrastructure/ai/: claude_provider.py  output_parser.py  prompt_builder.py  provider_protocol.py
backend/app/infrastructure/ai/providers/: anthropic_provider.py  gemini_provider.py  groq_provider.py  local_provider.py  openai_provider.py
backend/app/infrastructure/cache/: cve_cache.py  rate_limiter.py  redis_client.py
backend/app/infrastructure/cve/: nvd_client.py  nvd_client_v2.py  version_matcher.py
backend/app/infrastructure/database/: connection.py  models.py
backend/app/infrastructure/database/repositories/: asset_repository.py  organization_repository.py  scan_repository.py  user_repository.py  vulnerability_repository.py
backend/app/infrastructure/reporting/renderers/: docx_renderer.py  pdf_renderer.py
backend/app/infrastructure/reporting/templates/: base.html  compliance.html  executive.html  technical.html  vulnerability.html
backend/app/infrastructure/security/: audit_logger.py  jwt_handler.py  password_handler.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth_routes.py  test_user_routes.py
backend/tests/unit/services/: test_auth_service.py  test_user_service.py
frontend/: .dockerignore  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: index.ts
frontend/src/components/dashboard/: HealthGauge.tsx  SeverityChart.tsx  TrendChart.tsx
frontend/src/components/layout/: AppLayout.tsx  Sidebar.tsx  TopBar.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  EmptyState.tsx  Input.tsx  Modal.tsx  Pagination.tsx  Spinner.tsx  Table.tsx
frontend/src/hooks/: useDebounce.ts  usePermission.ts  useTheme.ts
frontend/src/lib/: axios.ts
frontend/src/pages/: AssetsPage.tsx  DashboardPage.tsx  LoginPage.tsx  RegisterPage.tsx  ReportsPage.tsx  ScansPage.tsx  SettingsPage.tsx  VulnerabilitiesPage.tsx
frontend/src/store/: auth.store.ts
frontend/src/types/: index.ts
nginx/: nginx.conf
