[build-system]
requires = ["setuptools>=71.0", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vuln-assessment-platform"
version = "1.0.0"
description = "AI-Powered Vulnerability Assessment Platform"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "python-multipart==0.0.9",
    # Database
    "sqlalchemy[asyncio]==2.0.30",
    "asyncpg==0.29.0",
    "alembic==1.13.1",
    "psycopg2-binary==2.9.9",
    # Validation
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "pydantic[email]==2.7.1",
    "email-validator==2.1.1",
    # Auth / Security
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.1.3",
    "pyotp==2.9.0",
    "cryptography==42.0.7",
    # Cache / Queue
    "redis==5.0.4",
    "celery[redis]==5.3.6",
    # HTTP client
    "httpx==0.27.0",
    # Logging
    "structlog==24.1.0",
    # Utilities
    "python-dotenv==1.0.1",
    "tenacity==8.3.0",
    # Rate limiting
    "slowapi==0.1.9",
    # AI providers
    "openai==1.30.0",
    # Report generation
    "python-docx==1.1.2",
    "jinja2==3.1.4",
    "matplotlib==3.9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "W", "F", "I", "N", "UP", "S", "B", "A", "C4", "DTZ", "T20", "RET", "SIM"]
ignore = ["S101"]  # allow assert in tests

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
env = [
    "APP_ENV=test",
    "DATABASE_URL=postgresql+asyncpg://test:test@localhost:5433/test_vulnassess",
    "REDIS_URL=redis://localhost:6379/15",
]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/migrations/*"]

# Runtime dependencies
[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1,<0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-env>=1.1.0",
    "httpx>=0.26.0",
    "factory-boy>=3.3.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
]
